--- a/stack.yaml
+++ b/stack.yaml
@@ -39,7 +39,7 @@ packages:
 - .
 - location:
    git: https://github.com/cutsea110/ersatz.git
-   commit: support-cryptominisat5
+   commit: 3d4af416717654a09b5884012229eba0c2945b60
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
 extra-deps: []
